--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "resend": "^4.5.1",
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0"
