--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "ftp-deploy": "^2.4.7",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.2"
   }
